src/np222kk/dv507/a2/test/cases/negative/test_neg_functions_01.ofp
# test_neg_functions

int subA (int x,) {
    return x;
}

void sub_A1 () {
    sub().sub();
    x.sub();
}

void test Method () {
    
}

void main() {
    int x(int i) {
        string x = "Method here not allowed"
    }
    fun(fun()[i].length).length;
}

void subA ()
    print("Hello World!");
